--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "iono/iono",
+    "name": "iono/console",
     "description": "php cli application",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "license": "MIT",
     "keywords": ["console", "php", "cli"],
     "authors": [
@@ -12,16 +12,12 @@
     ],
     "require": {
         "php": ">=5.4",
-        "ext-opcache": "*",
-        "comnect/console": "dev-master"
-    },
-    "suggest": {
-        "ext-pcntl": "*"
+        "iono/console-kernel": "dev-master"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/Application",
-            "App\\Tests": "src/tests"
+            "App\\": "src/App",
+            "App\\Tests": "tests"
         }
     },
     "prefer-stable": true
