--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/App",
-            "App\\Tests": "tests"
+            "App\\Tests\\": "tests"
         }
     },
     "prefer-stable": true
